syntax = "proto3";

package com.thekarenovich.task.console;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.thekarenovich.task.console";

service TaskService {
  rpc AddTask (AddTaskRequest) returns (Task);
  rpc GetTask (GetTaskRequest) returns (Task);
  rpc MarkTaskAsCompleted (MarkTaskRequest) returns (Task);
}

message AddTaskRequest {
  string title = 1;
  string description = 2;
}

message GetTaskRequest {
  int32 taskId = 1;
}

message MarkTaskRequest {
  int32 taskId = 1;
}

message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}
